--- a/heelForWomen.html
+++ b/heelForWomen.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="mainpageStyle.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"><img src="logo.jpg" id="logo"></a>    
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
@@ -19,7 +19,7 @@
             </button>
             <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
                 <div class="navbar-nav d-flex justify-content-center ">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="main.html">Home</a>
                     <a class="nav-link" href="#men-cnt">Men</a>
                     <a class="nav-link" href="#">Women</a>
                     <a class="nav-link" href="#">Best seller</a>
