--- a/sandleForWomen.html
+++ b/sandleForWomen.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="mainpageStyle.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"><img src="logo.jpg" id="logo"></a>    
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
